deleteHousemate bug fixed links between login/registration added

--- a/chore_tracker/chore_app/templates/chore_app/registration/login.html
+++ b/chore_tracker/chore_app/templates/chore_app/registration/login.html
@@ -21,6 +21,9 @@
 
                 <input class="btn btn-primary" type="submit" value="{% trans 'Log in' %}" />
                 <input type="hidden" name="next" value="{{ next }}" />
+                <p></p>
+                <p><a href="../register/">Create a New Account</a></p>
+                <p><a href="/">Reset Password</a></p>
             </form>
 
 {#            <p>{% trans "Forgot password" %}? <a href="{% url 'auth_password_reset' %}">{% trans "Reset it" %}</a>!</p>#}
