Refactored css style and added dropdown collapsable menus

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -81,7 +81,7 @@
 			{% endif %}
 			<!-- Today Chore Table -->
 			{% if today_set %}
-			<div>
+			<div> <!-- Div storing collapse dropdown -->
 				<button id='dropdown-today' type='button' class='btn collapsed' data-toggle='collapse' data-target='#today'>TODAY</button>
 			</div>
 			<div id='today' class='collapse in'>
