--- a/chore_tracker/chore_app/templates/chore_app/addHousemate.html
+++ b/chore_tracker/chore_app/templates/chore_app/addHousemate.html
@@ -37,11 +37,14 @@
 		</div>
 	</nav>
 	<h1 style="position: relative; left: 10px; width: 400; font-size: 25;">Add Housemate</h1> 
-	<form method='post' action='' style="position: relative; left: 10px">{% csrf_token %}		
+	<form method='post' action='' style="position: relative; left: 10px">
+		{% csrf_token %}		
 		{{ form.as_p }}
-		<input style="position: relative; top: 6.5" type='submit' class="btn btn-success pull-left" value='Add Housemate'/>
-		<div class="cancel">
-			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a></button>
+		<div class='save'>
+			<input type='submit' class="btn btn-success pull-left" value='Add Housemate'/>
+		</div>
+		<div class='cancel'>
+			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a>
 		</div>
 	</form>
 </body>
