Aligned 'Save' and 'Cancel' button. Updated css to reflect

--- a/chore_tracker/chore_app/templates/chore_app/editInfo.html
+++ b/chore_tracker/chore_app/templates/chore_app/editInfo.html
@@ -45,10 +45,10 @@
 		<input type='text' name='last_name'/></br>
 		<label>Email</label></br>
 		<input type='text' name='email'/></br>
-
-		<input style="position: relative;" type='submit' class = "btn btn-success pull-left" value='Save'/>
-		<div class="cancel">
-			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a></button>
+		<div class='save'>
+			<input type='submit' class = "btn btn-success pull-left" value='Save'/>
 		</div>
-	</form>
+		<div class="cancel">
+			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a>
+		</div>
 </body>
