--- a/chore_tracker/chore_app/static/chore_app/style.css
+++ b/chore_tracker/chore_app/static/chore_app/style.css
@@ -13,9 +13,13 @@ ul {
 	list-style: square;
 }
 
-table {
+table.table-hover {
 	margin-bottom: 0px;
     padding: 0;
+}
+
+nav.navbar-inverse {
+    margin-bottom: 0px;
 }
 
 td {
@@ -50,9 +54,17 @@ input[type='submit'] {
     margin-right: 5;
 }
 
-#add-housemate{
+#add-housemate {
     float: right;
     margin-bottom: 10;
+}
+
+a.housemate-name {
+    font-size: 30; 
+    font-family: Cambria; 
+    color: green; 
+    text-decoration: none;
+    font-weight: 300;
 }
 
 div.save {
@@ -92,6 +104,10 @@ div#name-button {
     width: 100%;
 }
 
+.delete-btn {
+    text-align: center;
+}
+
 th.table-header {
     font-size: 18;
     font-family: 'Segoe UI';
@@ -101,20 +117,20 @@ th.table-header {
 
 #dropdown-overdue {
     padding: 2px;
-    border-radius: 5px;
+    border-radius: 10px;
     font-size: 24;
     text-align: center;
     width: 100%;
-    font-family: "Open (sans)";
+    font-family: Georgia, Tahoma, 'Lucida Sans Unicode';
     background-color: #d9534f;
-    font-weight: 700;
+    font-weight: 300;
 }
 
 #dropdown-today {
     font-family: 'Open Sans', 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', Tahoma, Arial, sans-serif;
-    background-color: #47d147;
-    font-weight: 400;
-    border-radius: 5px;
+    background-color: #54B6FF;
+    font-weight: 300;
+    border-radius: 10px;
     font-size: 24;
     text-align: center;
     padding: 0;
@@ -124,15 +140,15 @@ th.table-header {
 #no-chores {
     font-family: 'Open Sans', 'Segoe UI', Tahoma, Arial, sans-serif, Sans;
     font-size: 20;
-    font-weight: 500;
+    font-weight: 400;
     text-align: center;
 }
 
 #dropdown-tomorrow {
     font-family: 'Segoe UI', 'Dejavu Sans', Calibri, Dejavu, Frutiger, Tahoma, Arial, Helvetica, Times;
-    background-color: #b3d9ff;
-    font-weight: 400;
-    border-radius: 5px;
+    background-color: #81C5FF;
+    font-weight: 300;
+    border-radius: 10px;
     font-size: 24;
     text-align: center;
     padding: 0;
@@ -141,9 +157,9 @@ th.table-header {
 
 #dropdown-upcoming {
     font-family: 'Segoe UI', 'Dejavu Sans', Calibri, Dejavu, Frutiger, Tahoma, Arial, Helvetica, Times;
-    background-color: ;
-    font-weight: 400;
-    border-radius: 5px;
+    background-color: #BED1E3;
+    font-weight: 300;
+    border-radius: 10px;
     font-size: 24;
     text-align: center;
     padding: 0;
