Fixed html structure, added divs sections

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -36,17 +36,18 @@
 			</div>
 		</div>
 	</nav>
-		<div>
-			<div id='name'>
-				<h1>{{housemate.full_name }}</h1>
-			</div>
-			<div id='add-chore'>
-				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a>
-			</div>
-			<div class='contain'>
-			<!-- Overdue Chore Table -->
-			{% if overdue_set %}
-				<button id='dropdown-overdue' type='button' class='btn' data-toggle='collapse' data-target='#overdue'>OVERDUE</button>
+	<div>
+		<div id='name'>
+			<h1>{{housemate.full_name }}</h1>
+		</div>
+		<div id='add-chore'>
+			<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a>
+		</div>
+		{% if overdue_set %} <!-- Overdue Chore Table -->
+			<div>
+				<div>
+					<button id='dropdown-overdue' type='button' class='btn' data-toggle='collapse' data-target='#overdue'>OVERDUE</button>
+				</div>
 				<div id='overdue' class='collapse in'>
 					<table class="table table-hover">
 						<tr>
@@ -78,64 +79,108 @@
 						{% endfor %}
 					</table>
 				</div>
-			{% endif %}
-			<!-- Today Chore Table -->
-			{% if today_set %}
-			<div> <!-- Div storing collapse dropdown -->
-				<button id='dropdown-today' type='button' class='btn collapsed' data-toggle='collapse' data-target='#today'>TODAY</button>
 			</div>
-			<div id='today' class='collapse in'>
-				<table class="table table-hover">
-					<tr>
-						<th class="table-header">Status</th>
-						<th class="table-header">Chore Title</th>
-						<th class="table-header">Due Date</th>
-						<th class="table-header"></th>
-					</tr>		
-					{% for chore in today_set %}
-						{% cycle '<tr>' '' %}
-							{% if chore.is_done %}
-								<td>
-									<form method='POST' action=''>
-									{% csrf_token %}
-									<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked />
-									</form>
+		{% endif %}
+		{% if today_set %} <!-- Today Chore Table -->
+			<div>
+				<div>
+					<button id='dropdown-today' type='button' class='btn collapsed' data-toggle='collapse' data-target='#today'>TODAY</button>
+				</div>
+				<div id='today' class='collapse in'>
+					<table class="table table-hover">
+						<tr>
+							<th class="table-header">Status</th>
+							<th class="table-header">Chore Title</th>
+							<th class="table-header">Due Date</th>
+							<th class="table-header"></th>
+						</tr>		
+						{% for chore in today_set %}
+							{% cycle '<tr>' '' %}
+								{% if chore.is_done %}
+									<td>
+										<form method='POST' action=''>
+										{% csrf_token %}
+										<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked />
+										</form>
+									</td>
+									<td><strike> {{ chore.chore_title }} </strike></td>
+									<td><strike> {{ chore.due_date }} </strike></td>
+								{% else %}
+									<td><input type="checkbox" style="position: relative; left: 10px;" name='status'/></td>
+									<td> {{ chore.chore_title}} </td>
+									<td> {{ chore.due_date }} </td>
+								{% endif %}
+								<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
+									<span class="glyphicon glyphicon-trash"></span> </a>
 								</td>
-								<td><strike> {{ chore.chore_title }} </strike></td>
-								<td><strike> {{ chore.due_date }} </strike></td>
-							{% else %}
-								<td><input type="checkbox" style="position: relative; left: 10px;" name='status'/></td>
-								<td> {{ chore.chore_title}} </td>
-								<td> {{ chore.due_date }} </td>
-							{% endif %}
-							<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
-								<span class="glyphicon glyphicon-trash"></span> </a>
-							</td>
-						{% cycle '</tr>' ''%}
-					{% endfor %}
-				</table>
+							{% cycle '</tr>' ''%}
+						{% endfor %}
+					</table>
+				</div>
 			</div>
-			{% else %}
-				<button id='dropdown-today' type='button' class='btn' data-toggle='collapse' data-target='#today'>TODAY</button>
+		{% else %}
+			<div>
+				<div>
+					<button id='dropdown-today' type='button' class='btn' data-toggle='collapse' data-target='#today'>TODAY</button>
+				</div>
 				<div id='today' class='collapse'>
 					<p id='no-chores'>No chores for today! <span class='glyphicon glyphicon-check'></span></p>
 				</div>
-			{% endif %}
-			{% if tomorrow_set %}
-			<!-- Tomorrow Chore Table -->
-			<div>
-				<button id='dropdown-tomorrow' type='button' class='btn' data-toggle='collapse' data-target='#tomorrow'>TOMORROW</button>
 			</div>
-			<div id='tomorrow' class='collapse'>
-				<table class="table table-hover">
-					<tr>
-						<th class="table-header">Status</th>
-						<th class="table-header">Chore Title</th>
-						<th class="table-header">Due Date</th>
-						<th class="table-header"></th>
-					</tr>
-								
-					{% for chore in tomorrow_set %}
+		{% endif %}
+		{% if tomorrow_set %} <!-- Tomorrow Chore Table -->
+			<div>
+				<div>
+					<button id='dropdown-tomorrow' type='button' class='btn' data-toggle='collapse' data-target='#tomorrow'>TOMORROW</button>
+				</div>
+				<div id='tomorrow' class='collapse'>
+					<table class="table table-hover">
+						<tr>
+							<th class="table-header">Status</th>
+							<th class="table-header">Chore Title</th>
+							<th class="table-header">Due Date</th>
+							<th class="table-header"></th>
+						</tr>
+									
+						{% for chore in tomorrow_set %}
+							{% cycle '<tr>' '' %}
+								{% if chore.is_done %}
+									<td>
+										<form method='POST' action=''>
+										{% csrf_token %}
+										<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked />
+										</form>
+									</td>
+									<td><strike> {{ chore.chore_title }} </strike></td>
+									<td><strike> {{ chore.due_date }} </strike></td>
+								{% else %}
+									<td><input type="checkbox" style="position: relative; left: 10px;" name='status'/></td>
+									<td> {{ chore.chore_title}} </td>
+									<td> {{ chore.due_date }} </td>
+								{% endif %}
+								<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
+									<span class="glyphicon glyphicon-trash"></span> </a>
+								</td>
+							{% cycle '</tr>' ''%}
+						{% endfor %}
+					</table>
+				</div>
+			</div>
+		{% endif %}
+		{% if upcoming_set %} <!-- Upcoming Chore Table -->
+			<div>
+				<div>
+					<button id='dropdown-upcoming' type='button' class='btn' data-toggle='collapse' data-target='#upcoming'>UPCOMING</button>
+				</div>
+				<div id='upcoming' class='collapse'>
+					<table class="table table-hover">
+						<tr>
+							<th class="table-header">Status</th>
+							<th class="table-header">Chore Title</th>
+							<th class="table-header">Due Date</th>
+							<th class="table-header"></th>
+						</tr>			
+						{% for chore in upcoming_set %}
 						{% cycle '<tr>' '' %}
 							{% if chore.is_done %}
 								<td>
@@ -151,54 +196,14 @@
 								<td> {{ chore.chore_title}} </td>
 								<td> {{ chore.due_date }} </td>
 							{% endif %}
-							<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
+							<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
 								<span class="glyphicon glyphicon-trash"></span> </a>
 							</td>
 						{% cycle '</tr>' ''%}
-					{% endfor %}
-				</table>
-			</div>
-			{% endif %}
-			<!-- Upcoming Chore Table -->
-			{% if upcoming_set %}
-			<div>
-				<button id='dropdown-upcoming' type='button' class='btn' data-toggle='collapse' data-target='#upcoming'>UPCOMING</button>
-			</div>
-				<div id='upcoming' class='collapse'>
-				<table class="table table-hover">
-					<tr>
-						<th class="table-header">Status</th>
-						<th class="table-header">Chore Title</th>
-						<th class="table-header">Due Date</th>
-						<th class="table-header"></th>
-					</tr>			
-					{% for chore in upcoming_set %}
-					{% cycle '<tr>' '' %}
-						{% if chore.is_done %}
-							<td>
-								<form method='POST' action=''>
-								{% csrf_token %}
-								<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked />
-								</form>
-							</td>
-							<td><strike> {{ chore.chore_title }} </strike></td>
-							<td><strike> {{ chore.due_date }} </strike></td>
-						{% else %}
-							<td><input type="checkbox" style="position: relative; left: 10px;" name='status'/></td>
-							<td> {{ chore.chore_title}} </td>
-							<td> {{ chore.due_date }} </td>
-						{% endif %}
-						<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
-							<span class="glyphicon glyphicon-trash"></span> </a>
-						</td>
-					{% cycle '</tr>' ''%}
-					{% endfor %}
-				</table>
-			</div>
-			{% endif %}
+						{% endfor %}
+					</table>
 				</div>
-<!-- 			<div class="button">
-				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
-			</div> -->
-		</div>
+			</div>
+		{% endif %}
+	</div>
 </body>
