Added missing form close tag

--- a/chore_tracker/chore_app/templates/chore_app/editInfo.html
+++ b/chore_tracker/chore_app/templates/chore_app/editInfo.html
@@ -51,4 +51,5 @@
 		<div class="cancel">
 			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a>
 		</div>
+	</form>
 </body>
