--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -52,35 +52,32 @@ body {
                     <button type="submit" class="btn btn-default">Login</button>
                     </form>
                 {% endif %}
-
             </div>
         </div>
 	</nav>
-	<!-- List all of the names in the household of housemates -->
-	{% if alphabetical_order %}
-	<div>
-		<div id='add-housemate'>
-			<a href="{% url 'chore_app:addHousemate' %}" class="btn btn-primary" role="button">Add Housemate</a>
-		</div>
+	{% if alphabetical_order %} <!-- List all of the names in the household of housemates -->
 		<div>
-			<h1>Housemates:</h1>
+			<div id='add-housemate'>
+				<a href="{% url 'chore_app:addHousemate' %}" class="btn btn-primary" role="button">Add Housemate</a>
+			</div>
+			<div>
+				<h1>Housemates:</h1>
+			</div>
+			<div>
+			    <ul>
+			    {% for housemate in alphabetical_order %} <!-- If names exist in database, list them out in for loop -->
+		        	<li>
+		        		<a class='housemate-name' href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a>
+		        		<a href="{% url 'chore_app:editInfo' housemate.id %}" class="btn btn-info"> <span class="glyphicon glyphicon-pencil"></span></a>
+		        		<a href="{% url 'chore_app:deleteHousemate' housemate.id %}" class="btn btn-danger"> <span class="glyphicon glyphicon-trash"></span></a>
+		        	</li>
+			    {% endfor %}
+			    </ul>
+			</div>
 		</div>
-		<!-- If names exist in database, list them out in for loop -->
+	{% else %} <!-- If there are no housemates -->
 		<div>
-		    <ul>
-		    {% for housemate in alphabetical_order %}
-	        	<li>
-	        		<a style="font-size: 26; font-family: Cambria; color: green; text-decoration: none;" href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a>
-	        		<a href="{% url 'chore_app:editInfo' housemate.id %}" class="btn btn-info"> <span class="glyphicon glyphicon-pencil"></span></a>
-	        		<a href="{% url 'chore_app:deleteHousemate' housemate.id %}" class="btn btn-danger"> <span class="glyphicon glyphicon-trash"></span></a>
-	        	</li>
-		    {% endfor %}
-		    </ul>
-		</div>
-	</div>
-	{% else %}
-		<!-- print statement displaying no names available -->
-	    <p>No names are available.</p>
-{% endif %}
+		    <p>No names are available.</p>
+		</div>	
+	{% endif %}
 </body>
-
