--- a/chore_tracker/house/templates/house/house.html
+++ b/chore_tracker/house/templates/house/house.html
@@ -12,6 +12,30 @@
 
 <title>House</title>
 <body>
+	<!-- Black navbar header -->
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria"></span> Chore Tracker</a>
+			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<div class="collapse navbar-collapse navHeaderCollapse">
+				<ul class="nav navbar-nav navbar-right">
+					<!-- Settings dropdown menu -->
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">About</a></li>
+							<li><a href="#">Preferences</a></li>
+							<li><a href="#">Help</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<!-- List all of the names in the houses -->
 	{% if alphabetical_order %}
 	<div style="position: relative; left:15; width: 400; bottom: 10">
