--- a/chore_tracker/chore_app/templates/chore_app/editInfo.html
+++ b/chore_tracker/chore_app/templates/chore_app/editInfo.html
@@ -23,6 +23,7 @@
 			</button>
 			<div class="collapse navbar-collapse navHeaderCollapse">
 				<ul class="nav navbar-nav navbar-right">
+                    <li><a href="../accounts/logout/">Log out</a></li>
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
@@ -36,19 +37,21 @@
 			</div>
 		</div>
 	</nav>
-	<h1 style="position: relative; left: 10px; width: 400; font-size: 25;">Edit Housemate</h1> 
-	<form method='POST' action='' style="position: relative;left: 10px">
-		{% csrf_token %}
-		<label>First name</label></br> 
-		<input type='text' name='first_name' default='None'/></br>
-		<label>Last name</label></br>
-		<input type='text' name='last_name'/></br>
-		<label>Email</label></br>
-		<input type='text' name='email'/></br>
-		<div class='save'>
-			<input type='submit' class = "btn btn-success pull-left" value='Save'/>
-		</div>
-		<div class="cancel">
-			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a>
-		</div>
+	<h1 style="position: relative; left: 10px; width: 400; font-size: 25;">Edit Housemate</h1>
+    <form method='POST' action='' style="position: relative;left: 10px">
+        {% csrf_token %}
+        <label>First name</label></br>
+        <input type='text' name='first_name' default='None'/></br>
+        <label>Last name</label></br>
+        <input type='text' name='last_name'/></br>
+        <label>Email</label></br>
+        <input type='text' name='email'/></br>
+        <div class='save'>
+            <input type='submit' class = "btn btn-success pull-left" value='Save'/>
+        </div>
+        <div class="cancel">
+            <a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a>
+        </div>
+    </form>
+
 </body>
